chore : fix : overflow del boton copiar y mejoras visuales

--- a/assets/css/classStyles.css
+++ b/assets/css/classStyles.css
@@ -56,10 +56,12 @@ pre {
   background: #282c34;
   color: #61dafb;
   margin: 20px 0;
-  padding: 0px; /* Elimina el padding de <pre> */
+  position: relative;
+  padding: 2px;
   border-radius: 5px;
   font-family: "Courier New", Courier, monospace;
   overflow-x: auto;
+  white-space: pre-wrap;
 }
 
 /* Estilos para <code> dentro de <pre> */
