--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -317,12 +317,12 @@ summary:hover {
 /* Estilos para el botón de copiar en bloques de código */
 .copy-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   background-color: #4e4e4e;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 2px 5px;
   font-size: 0.8rem;
   border-radius: 3px;
   cursor: pointer;
@@ -340,7 +340,7 @@ summary:hover {
 
 .copy-button::after {
   content: "✓";
-  font-size: 1rem;
+  font-size: 0.8rem;
   display: none;
 }
 
